--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -1,4 +1,7 @@
 .board {
+	text-align: center;
+	margin: auto;
+	font-size: 20px;
 	width: 300px; /* Total horizontal dimensions */
 	height: 300px; /* Total vertical dimensions */
 	display: grid; /* Enables CSS Grid */
