--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -6,9 +6,23 @@
 	height: 300px; /* Total vertical dimensions */
 	display: grid; /* Enables CSS Grid */
 	grid-template-columns: repeat(3, 1fr); /* Total horizontal space broken into 3 columns */
-  grid-template-rows: repeat(3, 1fr); /* Total vertical space broken into 3 rows */
+	grid-template-rows: repeat(3, 1fr); /* Total vertical space broken into 3 rows */
 }
 
 .box {
   border: 1px solid black; /* Shows the lines in the CSS grid */
+}
+
+.window{
+	/*display: grid; */
+	/*grid-template-columns: auto auto auto;*/
+	/*text-align: center;*/
+	display: grid;
+	grid-template-columns: auto auto auto;
+	padding: 10px;
+}
+col{
+	padding: 20px;
+	font-size: 30px;
+	text-align: center;
 }
