--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,10 @@
   	background-color: #2196F3;
 }
 
+.game{
+	display:flex;
+	justify-content:center;
+}
 /*.App-logo {*/
 /*  height: 40vmin;*/
 /*  pointer-events: none;*/
