add db, leaderboard, and trying for winner score

--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -19,7 +19,7 @@
 .window{
 	text-align: center;
 	display: grid;
-	grid-template-columns: auto auto;
+	grid-template-columns: auto auto auto;
 	padding: 10px;
 }
 .col{
