--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,6 +6,21 @@
 	display:flex;
 	justify-content:center;
 }
+
+.logout{
+    background-color: crimson;
+    border: none;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    opacity: 0.6;
+    transition: 0.3s;
+    cursor: pointer;
+    display: flex;
+    margin-left: auto;
+    margin-right: 40px;
+}
+.logout:hover {opacity: 1}
 /*.App-logo {*/
 /*  height: 40vmin;*/
 /*  pointer-events: none;*/
