--- a/src/styles/Leaderboard.css
+++ b/src/styles/Leaderboard.css
@@ -8,3 +8,10 @@ tfoot {
     background-color: #333;
     color: #fff;
 }
+
+.currentLB > td{
+    background-color: yellow;
+}
+.regularLB > td{
+    background-color: cyan;
+}
