--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -5,8 +5,14 @@
 	width: 300px; /* Total horizontal dimensions */
 	height: 300px; /* Total vertical dimensions */
 	display: grid; /* Enables CSS Grid */
-	grid-template-columns: repeat(3, 1fr); /* Total horizontal space broken into 3 columns */
-	grid-template-rows: repeat(3, 1fr); /* Total vertical space broken into 3 rows */
+	grid-template-columns: repeat(
+		3,
+		1fr
+	); /* Total horizontal space broken into 3 columns */
+	grid-template-rows: repeat(
+		3,
+		1fr
+	); /* Total vertical space broken into 3 rows */
 }
 
 .box {
@@ -16,44 +22,46 @@
 	border: 1px solid black; /* Shows the lines in the CSS grid */
 }
 
-.window{
+.window {
 	text-align: center;
 	display: grid;
 	grid-template-columns: auto auto auto;
 	padding: 10px;
 }
-.col{
+.col {
 	min-height: 500px;
 	display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	padding: 20px;
 	font-size: 20px;
 }
 
-.reset_button{
+.reset_button {
 	border-radius: 6px;
-    padding: 10px 24px;
-    background-color: darkgray;
-    cursor: pointer;
+	padding: 10px 24px;
+	background-color: darkgray;
+	cursor: pointer;
 }
 
-.winner{
-	box-shadow:0 0 15px 4px lightblue;
+.winner {
+	box-shadow: 0 0 15px 4px lightblue;
 	color: chartreuse;
-	display:flex;
-	justify-content:center;
+	display: flex;
+	justify-content: center;
 }
 
-.SHLeaderboard{
-    background-color: crimson;
-    border: none;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    opacity: 0.6;
-    transition: 0.3s;
-    cursor: pointer;
+.SHLeaderboard {
+	background-color: crimson;
+	border: none;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	opacity: 0.6;
+	transition: 0.3s;
+	cursor: pointer;
 }
-.SHLeaderboard:hover {opacity: 1}
+.SHLeaderboard:hover {
+	opacity: 1;
+}
