--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,26 +1,28 @@
 * {
-  	background-color: #2196F3;
+	background-color: #2196f3;
 }
 
-.game{
-	display:flex;
-	justify-content:center;
+.game {
+	display: flex;
+	justify-content: center;
 }
 
-.logout{
-    background-color: crimson;
-    border: none;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    opacity: 0.6;
-    transition: 0.3s;
-    cursor: pointer;
-    display: flex;
-    margin-left: auto;
-    margin-right: 40px;
+.logout {
+	background-color: crimson;
+	border: none;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	opacity: 0.6;
+	transition: 0.3s;
+	cursor: pointer;
+	display: flex;
+	margin-left: auto;
+	margin-right: 40px;
 }
-.logout:hover {opacity: 1}
+.logout:hover {
+	opacity: 1;
+}
 /*.App-logo {*/
 /*  height: 40vmin;*/
 /*  pointer-events: none;*/
@@ -33,14 +35,14 @@
 /*}*/
 
 /*.App-header {*/
-  /*background-color: #282c34;*/
+/*background-color: #282c34;*/
 /*  min-height: 100vh;*/
 /*  display: flex;*/
 /*  flex-direction: column;*/
 /*  align-items: center;*/
 /*  justify-content: center;*/
-  /*font-size: calc(10px + 2vmin);*/
-  /*color: white;*/
+/*font-size: calc(10px + 2vmin);*/
+/*color: white;*/
 /*}*/
 
 /*.App-link {*/
