--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,27 +1,29 @@
-.login{
-    min-height: 70vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.login {
+	min-height: 70vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
-.login_input{
-    padding:10px;
-    border:0;
-    box-shadow:0 0 15px 4px black;
-    background-color: white;
-    margin-bottom: 10px;
+.login_input {
+	padding: 10px;
+	border: 0;
+	box-shadow: 0 0 15px 4px black;
+	background-color: white;
+	margin-bottom: 10px;
 }
 
-.login_button{
-    background-color: crimson;
-    border: none;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    opacity: 0.6;
-    transition: 0.3s;
-    cursor: pointer;
+.login_button {
+	background-color: crimson;
+	border: none;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	opacity: 0.6;
+	transition: 0.3s;
+	cursor: pointer;
 }
-.login_button:hover {opacity: 1}
+.login_button:hover {
+	opacity: 1;
+}
